[package]
name = "lis"
version = "0.1.1"
authors = ["Axel Forsman <axelsfor@gmail.com>"]
description = "Longest increasing subsequence algorithm"
license = "MIT"
repository = "https://github.com/axelf4/lis"
readme = "README.md"
exclude = [".gitignore", ".travis.yml"]
edition = "2018"

[dependencies]
rustc-hash = "1.0.1"

[badges]
travis-ci = { repository = "axelf4/lis" }
